archived-demos/voice-agent-magpietts/dev-k8s-deployment/pod-svc-vs.yaml
apiVersion: v1
kind: Service
metadata:
  name: gradio-ui-service
  namespace: andrew-mendez-184335fb
spec:
  type: ClusterIP
  selector:
    app: audio-pipeline
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audio-pipeline-deployment
  namespace: andrew-mendez-184335fb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audio-pipeline
  template:
    metadata:
      labels:
        app: audio-pipeline
      annotations:
        sidecar.istio.io/inject: "false"  # <-- Disable Istio sidecar
    spec:
      containers:
      - name: websocket-server
        image: mendeza/web-socket-server:0.0.1
        imagePullPolicy: Always             # <-- Always pull
        ports:
        - containerPort: 8765
      - name: gradio-ui
        image: mendeza/web-socket-server-ui:0.0.1
        imagePullPolicy: Always             # <-- Always pull
        ports:
        - containerPort: 8080
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: riva-virtual-service
  namespace: andrew-mendez-184335fb
spec:
  gateways:
  - istio-system/ezaf-gateway
  hosts:
  - riva-websocket.ingress.pcai0108.dc15.hpecolo.net
  http:
  - match:
    - uri:
        prefix: /
    rewrite:
      uri: /
    route:
    - destination:
        host: gradio-ui-service.andrew-mendez-184335fb.svc.cluster.local
        port:
          number: 8080
